statum-macros/tests/ui/invalid_validators_missing_variant.stderr
error: Error: `#[validators(TaskMachine)]` on `impl DbRow` is missing validator method `is_done` for `TaskState::Done`.
       Fix: add one validator per state variant (snake_case), e.g. `fn is_draft(&self) -> Result<()>`.
  --> tests/ui/invalid_validators_missing_variant.rs:29:1
   |
29 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `__statum_assert_task_machine_validator_present` which comes from the expansion of the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_missing_variant.rs:39:2
   |
39 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_missing_variant.rs`
